--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
     "jest": "^24.1.0",
+    "node-fetch": "^2.3.0",
     "regenerator-runtime": "^0.13.1"
   },
   "dependencies": {
