--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
     "jest": "^24.1.0",
-    "node-fetch": "^2.3.0",
     "regenerator-runtime": "^0.13.1"
   },
   "dependencies": {
     "balanced-match": "^1.0.0",
-    "marked": "^0.6.1"
+    "marked": "^0.6.1",
+    "node-fetch": "^2.3.0"
   }
 }
