--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "license": "MIT",
   "bin": {
-    "md-links": "./lib/cli.js"
+    "md-links": "./lib/cliExec.js"
   },
   "repository": {
     "type": "git",
